# pade

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-lint-test.yml
pade/: Cargo.toml
pade-macro/: Cargo.toml
pade-macro/src/: decode.rs  encode.rs  lib.rs
pade-macro/tests/: complex.rs  test.rs
pade/src/: decode.rs  encode.rs  header.rs  primitives.rs
