[package]
name = "pade-macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
itertools = "0"

[dev-dependencies]
alloy = { workspace = true, features = [
  "signers",
  "signer-local",
  "sol-types",
] }
pade.workspace = true
