[package]
name = "pade"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
thiserror.workspace = true
bitvec = "1"
pade-macro.workspace = true
bytes = "1"
alloy.workspace = true
