[package]
name = "pade"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
thiserror.workspace = true
bitvec = "1"
pade-macro.workspace = true
bytes = "1"
alloy = { workspace = true, optional = true }
alloy-sol-types.workspace = true


[features]
default = ["alloy"]
alloy = ["dep:alloy"]

[dev-dependencies]
alloy.workspace = true

# Enable js feature for getrandom when building for wasm32-unknown-unknown
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
